--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <a href="http://bank.gov.ua">National Bank of Ukraine</a>
+    <p>Make sure your pet has plenty of <i><b>fresh water</b></i> during hot weather.</p>
 </body>
 </html>
